syntax = "proto3";

option csharp_namespace = "GrpcService";

package product;

service Product {
	rpc GetProductsInformation (GetProductDetails) returns (ProductModel);
}

message GetProductDetails{
	int32 productId = 1;
}

message ProductModel {
	string productName = 1;
	string productDescription = 2;
	int32 productPrice = 3;
	int32 productStock = 4;
}
